stop moving the footer
while it was nice example of using grid + media query, it feels a bit too out of place

--- a/src/App.css
+++ b/src/App.css
@@ -19,18 +19,8 @@ footer {
   grid-template-columns: fit-content;
   grid-template-rows: 50px 1fr 100px;
   /*align-items: center;*/
-  height: 95vh;
+  height: 100vh;
   --body-margin: 8px;
   margin: var(--body-margin);
   text-align: center;
-}
-
-@media (min-width: 600px) {
-  #root {
-    grid-template-areas:
-      "header footer"
-      "main main";
-    grid-template-rows: 50px 1fr;
-    --body-margin: 20px;
-  }
 }
